PWN-8983 - Token Service Part 2 (#1947)
* PWN-8983 - Refactoring Home screen, create homescren loader

* PWN-8986 - Add more home screen loaders. Remove pending transaction manager worker. Create HomeScreenLocalRepository

* PWN-8986 - Update home buttons loader

* PWN-8983 - Add more home screen loaders

* PWN-8986 - Integrate home loaders to application

* PWN-8983 - Refactor main screen, refactor ethereum module

* PWN-8983 - Revert home screen observer changes

* PWN-8983 - Merge with develop branch

* PWN-8983 - Checkpoint commit

* PWN-8983 - Clean branch

* PWN-8983 - Fix bug with collecting tokens

* PWN-8983 - Fix ktlint

* PWN-8983 - Cleaning

* PWN-8983 - Cleaning part 2

* PWN-8983 - conflicts

* PWN-8983 - Resolve PR comments

* PWN-9233 - Remove solend & renbtc (#1949)

* PWN-9233 - Cleaning solend and renBTC

* PWN-9233 - unit tests

---------

Co-authored-by: Chingiz <chyngyz.i@p2p.org>