@@ -10,6 +10,9 @@ task ktlint(type: JavaExec) {
     main = "com.pinterest.ktlint.Main"
     classpath = configurations.ktlint
     args "$rootDir/**/*.kt"
+    // TODO: On a newer Java versions, there are restrictions for ktlint to access some libraries
+    // TODO: This is a temporary solution to not break ktlint
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 
     if (project.hasProperty("autoCorrect") && project.property("autoCorrect") == "0") {
         logger.quiet("(KTLINT): auto correction is disabled")
